--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </li>
             <li>
               <a
-                href="https://bbg.unnamed.group"
+                href="https://unnamed.group/bbg/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
