--- a/index.html
+++ b/index.html
@@ -106,6 +106,33 @@
             </li>
             <li>
               <a
+                href="https://zuedev.gitlab.io/classless/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <b>Classless:</b> A classless CSS framework
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://eldragiir.guide/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <b>Eldragiir Guide:</b> Fantasy worldbuilding project
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://paradise.directory/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <b>Paradise Directory:</b> Sci-fi worldbuilding project
+              </a>
+            </li>
+            <li>
+              <a
                 href="https://www.npmjs.com/package/discordjs-reactroles"
                 target="_blank"
                 rel="noopener noreferrer"
